--- a/style.css
+++ b/style.css
@@ -235,12 +235,14 @@ height: 100%;
     height: calc(100% - 40px);
     position: fixed;
     top: 40px;
-    left: 0;
+    left: 10px;
+    right: 10;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     background: #fff;
+    padding-left: 0px;
   }
   header .navigation li{
     margin-left: 0;
@@ -248,7 +250,7 @@ height: 100%;
   header .navigation li a{
     text-decoration: none;
     color: #111;
-    font-size: 2.2em;
+    font-size: 2.0em;
 
   }
   .menuToggle
