--- a/style2.css
+++ b/style2.css
@@ -304,8 +304,7 @@ height: 100%;
     height: calc(100% - 40px);
     position: fixed;
     top: 40px;
-    left: 10px;
-    right: 10;
+    left: 0;
     display: flex;
     justify-content: center;
     align-items: center;
