--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@ height: 100%;
   header.sticky
   {
     padding: 10px 20px;
-    width: 94%;
+    width: 95%;
   }
   header .navigation
   {
@@ -253,6 +253,7 @@ height: 100%;
     font-size: 2.0em;
 
   }
+
   .menuToggle
   {
     position: relative;
@@ -263,6 +264,7 @@ height: 100%;
     background-repeat: no-repeat;
     background-position: center;
     cursor: pointer;
+    padding-right: 30px;
   }
   .menuToggle.active
   {
